added a css for my index calculator page that gives us some space and room to breathe

--- a/SimpleNetCoreCalculator/Views/Home/Index.cshtml
+++ b/SimpleNetCoreCalculator/Views/Home/Index.cshtml
@@ -1,4 +1,10 @@
 ﻿@model Operation
+
+<head>
+    <link rel="stylesheet" href="~/css/CalcIndex.css" type="text/css">
+</head>
+
+
 <form asp-controller="Home" asp-action="Index" method="post">
     <div class="form-group">
         <div class="row">
