--- a/SimpleNetCoreCalculator/Views/Home/Index.cshtml
+++ b/SimpleNetCoreCalculator/Views/Home/Index.cshtml
@@ -8,22 +8,22 @@
 <form asp-controller="Home" asp-action="Index" method="post">
     <div class="form-group">
         <div class="row">
-            <label asp-for="NumberA" class="col-lg-2"></label>
-            <input type="number" asp-for="NumberA" class="col-lg-2" />
+            <label asp-for="NumberA"></label>
+            <input type="number" asp-for="NumberA" />
         </div>
         <div class="row">
-            <label asp-for="NumberB" class="col-lg-2"></label>
-            <input type="number" asp-for="NumberB" class="col-lg-2" />
+            <label asp-for="NumberB"></label>
+            <input type="number" asp-for="NumberB"/>
         </div>
         <div class="row">
-            <label asp-for="OperationType" class="col-lg-2"></label>
-            <select asp-for="OperationType" class="col-lg-2" asp-items="Html.GetEnumSelectList<OperationType>()">
+            <label asp-for="OperationType"></label>
+            <select asp-for="OperationType" asp-items="Html.GetEnumSelectList<OperationType>()">
                 <option selected="selected" value="">Select</option>
             </select>
         </div>
         <div class="row">
-            <label asp-for="Result" class="col-lg-2"></label>
-            <input type="number" disabled="disabled" class="col-lg-2" asp-for="Result" />
+            <label asp-for="Result"></label>
+            <input type="number" disabled="disabled" asp-for="Result" />
         </div>
         <div class="row">
             <input type="submit" value="Submit" asp-action="Index" />
