allowed my inputs to take any decimal place with the steps attribute

--- a/SimpleNetCoreCalculator/Views/Home/Index.cshtml
+++ b/SimpleNetCoreCalculator/Views/Home/Index.cshtml
@@ -9,11 +9,11 @@
     <div class="form-group">
         <div class="row">
             <label asp-for="NumberA"></label>
-            <input type="number" asp-for="NumberA" />
+            <input type="number" step="any" asp-for="NumberA" />
         </div>
         <div class="row">
             <label asp-for="NumberB"></label>
-            <input type="number" asp-for="NumberB"/>
+            <input type="number" step="any" asp-for="NumberB"/>
         </div>
         <div class="row">
             <label asp-for="OperationType"></label>
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <label asp-for="Result"></label>
-            <input type="number" disabled="disabled" asp-for="Result" />
+            <input type="number"  disabled="disabled" asp-for="Result" />
         </div>
         <div class="row">
             <input type="submit" value="Submit" asp-action="Index" />
