--- a/SimpleNetCoreCalculator/wwwroot/css/CalcIndex.css
+++ b/SimpleNetCoreCalculator/wwwroot/css/CalcIndex.css
@@ -20,3 +20,10 @@ form {
     border:4px solid purple;
 }
 
+@media(max-width:1000px){
+    form{
+        background-color:burlywood;
+    }
+}
+
+
