added a title and changed around some padding

--- a/SimpleNetCoreCalculator/Views/Home/Index.cshtml
+++ b/SimpleNetCoreCalculator/Views/Home/Index.cshtml
@@ -8,6 +8,9 @@
 <div class="divForm">
     <form asp-controller="Home" asp-action="Index" method="post">
         <div class="form-group">
+            <div class="row calcTitle">
+                <label><h3>Net Core Calulator</h3></label>
+            </div>
             <div class="row">
                 <label asp-for="NumberA"></label>
                 <input type="number" step="any" asp-for="NumberA" />
