--- a/SimpleNetCoreCalculator/wwwroot/css/CalcIndex.css
+++ b/SimpleNetCoreCalculator/wwwroot/css/CalcIndex.css
@@ -1,10 +1,13 @@
-﻿
+﻿.calcTitle{
+    padding:0px !important;
+}
+
 .row {
     margin-top:20px;
     margin-bottom:20px;
     display:flex;
     justify-content:space-between;
-    padding:20px;
+    padding:15px;
     border:2px solid chartreuse;
     border-radius:20px;
 }
