--- a/SimpleNetCoreCalculator/Views/Home/Index.cshtml
+++ b/SimpleNetCoreCalculator/Views/Home/Index.cshtml
@@ -12,10 +12,37 @@
                 <label><h3>Net Core Calulator</h3></label>
             </div>
             <div class="row">
+                <table>
+                    <tr>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td> < = </td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>/</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>x</td>
+                    </tr>
+                    <tr>
+                        <td>0</td>
+                        <td>.</td>
+                        <td>=</td>
+                        <td>+</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="row">
                 <label asp-for="NumberA"></label>
                 <label asp-for="OperationType"></label>
                 <label asp-for="NumberB"></label>
-
             </div>
             <div class="row">
                 <input type="number" step="any" asp-for="NumberA" />
