--- a/SimpleNetCoreCalculator/wwwroot/css/CalcIndex.css
+++ b/SimpleNetCoreCalculator/wwwroot/css/CalcIndex.css
@@ -22,6 +22,13 @@ form {
     border-radius: 20px;
     border:4px solid purple;
 }
+td{
+    border: 1px solid black;
+    border-radius: 5px;
+    height:80px;
+    width:80px;
+    text-align:center;
+}
 
 @media(max-width:991px){
     form{
